deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: postgresql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgresql:5.6
          name: postgresql
          livenessProbe:
            tcpSocket:
              port: 5432
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql-persistent-storage
              mountPath: /var/lib/postgresql
      volumes:
        - name: postgresql-persistent-storage
          persistentVolumeClaim:
            claimName: postgresql-pvc
